cabal-version:      3.0
name:               ghc-ast-cheatsheet
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jan HrÄek
maintainer:         honza.hrk@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Language.Haskell.Syntax.Pat.Example
    build-depends:    base ^>=4.20.0.0,
                      ghc-exactprint ^>= 1.10.0.0,
                      template-haskell
    hs-source-dirs:   src
    default-language: GHC2021

executable ghc-ast-cheatsheet
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        ghc-ast-cheatsheet,
        ghc ^>= 9.10.1,
        ghc-paths,
        ghc-exactprint ^>= 1.10.0.0

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite ghc-ast-cheatsheet-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        ghc-ast-cheatsheet
